@@ -1,7 +1,5 @@
 package utm.md.web.rest;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -18,24 +16,27 @@ import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 import tech.jhipster.web.util.PaginationUtil;
 import utm.md.service.UserService;
 import utm.md.service.dto.UserDTO;
-import utm.md.service.telegram.SendTelegramNotificationService;
 
 @RestController
 @RequestMapping("/api")
 public class PublicUserResource {
 
-    private static final List<String> ALLOWED_ORDERED_PROPERTIES = Collections.unmodifiableList(
-        Arrays.asList("id", "login", "firstName", "lastName", "email", "activated", "langKey")
+    private static final List<String> ALLOWED_ORDERED_PROPERTIES = List.of(
+        "id",
+        "login",
+        "firstName",
+        "lastName",
+        "email",
+        "activated",
+        "langKey"
     );
 
     private final Logger log = LoggerFactory.getLogger(PublicUserResource.class);
 
     private final UserService userService;
-    private final SendTelegramNotificationService telegramNotificationService;
 
-    public PublicUserResource(UserService userService, SendTelegramNotificationService telegramNotificationService) {
+    public PublicUserResource(UserService userService) {
         this.userService = userService;
-        this.telegramNotificationService = telegramNotificationService;
     }
 
     /**
@@ -67,11 +68,5 @@ public class PublicUserResource {
     @GetMapping("/authorities")
     public List<String> getAuthorities() {
         return userService.getAuthorities();
-    }
-
-    @GetMapping("/send")
-    public ResponseEntity<Void> sendNotification() {
-        telegramNotificationService.sendTestNotification();
-        return ResponseEntity.ok().build();
     }
 }
